--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "node_modules/.bin/webpack --config config/client.config.js",
+    "build": "node_modules/.bin/webpack-dev-server --config config/client.config.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -19,7 +19,8 @@
   "homepage": "https://github.com/stayman/typescript#readme",
   "devDependencies": {
     "@types/axios": "^0.9.34",
-    "@types/express": "^4.0.34",
+    "@types/react": "^0.14.55",
+    "@types/react-dom": "^0.14.20",
     "awesome-typescript-loader": "^3.0.0-beta.17",
     "source-map-loader": "^0.1.5",
     "typescript": "^2.1.4",
@@ -27,10 +28,7 @@
     "webpack-dev-server": "^2.2.0-rc.0"
   },
   "dependencies": {
-    "@types/react": "^0.14.55",
-    "@types/react-dom": "^0.14.20",
     "axios": "^0.15.3",
-    "express": "^4.14.0",
     "react": "^15.4.1",
     "react-dom": "^15.4.1"
   }
