--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,10 +3,11 @@
     "outDir": "./dist/",
     "sourceMap": true,
     "noImplicitAny": true,
-    "module": "commonjs",
+    "module": "ES6",
     "target": "es5",
     "jsx": "react",
-    "baseUrl": "./src"
+    "baseUrl": "./src",
+    "allowSyntheticDefaultImports": true
   },
   "include": [
     "./src/**/*"
